[package]
name = "rustii"
version = "0.1.0"
edition = "2021"
description = "Converts images to ASCII art"
license = "MIT"
repository = "https://github.com/ndr3www/rustii/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
miniz_oxide = "0.7.2"
indicatif = "0.17.8"
