[package]
name = "rustii"
version = "0.1.1"
edition = "2021"
description = "Converts images to ASCII art"
license = "MIT"
repository = "https://github.com/ndr3www/rustii/tree/main"
readme = "README.md"
keywords = ["ascii", "ascii-art", "cli", "text", "art"]
categories = ["command-line-utilities", "computer-vision", "encoding", "multimedia::images"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
miniz_oxide = "0.7.3"
indicatif = "0.17.8"

[lints.clippy]
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
